//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Tag {
  id Int [pk, increment]
  code String [unique, not null]
  type String [not null]
  name String [not null]
  AlbumAvailableMarket AlbumAvailableMarket [not null]
  TracksAvailableMarket TracksAvailableMarket [not null]
  ArtistInGenres ArtistInGenres [not null]
}

Table Artist {
  id Int [pk, increment]
  name String [not null]
  popularity Int
  imageUrl String
  Genres ArtistInGenres [not null]
  TrackProduceByArtist TrackProduceByArtist [not null]
  AlbumProduceByArtist AlbumProduceByArtist [not null]
}

Table ArtistDataMeta {
  id Int [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  uid String [unique, not null]
}

Table Track {
  id Int [pk, increment]
  name String [not null]
  discNumber Int [not null]
  popularity Int
  previewUrl String
  trackNumber Int [not null]
  availableMarkets TracksAvailableMarket [not null]
  Artists TrackProduceByArtist [not null]
  InPlaylist TracksOnPlaylist [not null]
  Album Album
  albumId Int
}

Table TrackMeta {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  uid String [unique, not null]
  durationMs Int [not null]
}

Table Album {
  id Int [pk, increment]
  albumType String [not null]
  totalTracks Int [not null]
  name String [not null]
  imageUrl String
  availableMarkets AlbumAvailableMarket [not null]
  Artists AlbumProduceByArtist [not null]
  Tracks Track [not null]
}

Table AlbumMeta {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  uid String [not null]
  releaseDate DateTime [not null]
  releaseDatePrecision String [not null]
  copyrights String
}

Table Playlist {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  public Boolean [not null]
  primaryColor String
  imagesId String
  tracks TracksOnPlaylist [not null]
}

Table PlaylistMeta {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  uid String
}

Table TracksOnPlaylist {
  playlistId Int [not null]
  Playlist Playlist [not null]
  trackId Int [not null]
  Track Track [not null]

  indexes {
    (playlistId, trackId) [pk]
  }
}

Table TracksAvailableMarket {
  tagId Int [not null]
  Tag Tag [not null]
  trackId Int [not null]
  Track Track [not null]

  indexes {
    (trackId, tagId) [pk]
  }
}

Table TrackProduceByArtist {
  trackId Int [not null]
  Track Track [not null]
  artistId Int [not null]
  Artists Artist [not null]

  indexes {
    (trackId, artistId) [pk]
  }
}

Table AlbumProduceByArtist {
  albumId Int [not null]
  Album Album [not null]
  artistId Int [not null]
  Artist Artist [not null]

  indexes {
    (albumId, artistId) [pk]
  }
}

Table AlbumAvailableMarket {
  albumId Int [not null]
  Album Album [not null]
  tagId Int [not null]
  Tag Tag [not null]

  indexes {
    (albumId, tagId) [pk]
  }
}

Table ArtistInGenres {
  Artist Artist [not null]
  artistId Int [not null]
  Tag Tag [not null]
  tagId Int [not null]

  indexes {
    (artistId, tagId) [pk]
  }
}

Ref: Track.albumId > Album.id

Ref: TracksOnPlaylist.playlistId > Playlist.id

Ref: TracksOnPlaylist.trackId > Track.id

Ref: TracksAvailableMarket.tagId > Tag.id

Ref: TracksAvailableMarket.trackId > Track.id

Ref: TrackProduceByArtist.trackId > Track.id

Ref: TrackProduceByArtist.artistId > Artist.id

Ref: AlbumProduceByArtist.albumId > Album.id

Ref: AlbumProduceByArtist.artistId > Artist.id

Ref: AlbumAvailableMarket.albumId > Album.id

Ref: AlbumAvailableMarket.tagId > Tag.id

Ref: ArtistInGenres.artistId > Artist.id

Ref: ArtistInGenres.tagId > Tag.id